--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
@@ -4,6 +4,8 @@
 <!-- Document Title -->
 <title>@ViewBag.Title | BisLeague</title>
 <!-- StyleSheets -->
+
+<link rel="icon" type="image/png" href="~/favicon.png">
 <link rel="stylesheet" href="~/Assets/css/bootstrap/bootstrap.min.css">
 <link rel="stylesheet" href="~/Assets/css/main.css">
 <link rel="stylesheet" href="~/Assets/css/icomoon.css">
