--- a/BisLeagues.Presentation/Views/News/Index.cshtml
+++ b/BisLeagues.Presentation/Views/News/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<BisLeagues.Core.Models.New>
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Haberler";
     Layout = "~/Views/Shared/_Layout_Heading.cshtml";
 }
 @section Heading{
