--- a/BisLeagues.Presentation/Views/Profile/Detail.cshtml
+++ b/BisLeagues.Presentation/Views/Profile/Detail.cshtml
@@ -48,7 +48,7 @@
                                 <li>Ad</li>
                                 <li>Soyad</li>
                                 <li>Email</li>
-                                <li>Gol</li>
+                                <li>Gol Sayısı</li>
                                 <li>Takım</li>
                             </ul>
                             <ul>
