--- a/BisLeagues.Presentation/Views/Search/Find.cshtml
+++ b/BisLeagues.Presentation/Views/Search/Find.cshtml
@@ -134,7 +134,7 @@
                 <h2 style="color:red;">Bulamadım.</h2>
                 <p> Ama ne olur bana bir şans daha ver.</p>
                 <form method="get" id="searchMobile" action="@Url.Action("Find", "Search")">
-                    <input type="text" class="form-control" name="query" id="query" placeholder="Arama" style="margin-top: 10px; color:white;" />
+                    <input type="text" class="form-control" name="query" id="query" placeholder="Arama" style="margin-top: 10px;" />
                     <input type="submit" value="Bul çabuk !" class="btn btn-success form-control" style="margin: 10px 0 10px 0;" />
                 </form>
             </div>
