--- a/BisLeagues.Presentation/Views/Search/Find.cshtml
+++ b/BisLeagues.Presentation/Views/Search/Find.cshtml
@@ -16,7 +16,7 @@
 
             @if (Model.Teams.Count > 0)
             {
-                <h2>Takımlar bunlar..</h2>
+                <h2 style="color:red;">Takımlar bunlar..</h2>
                 <div class="row">
                     @foreach (var item in Model.Teams)
                     {
@@ -72,7 +72,7 @@
             @if (Model.Players.Count > 0)
             {
 
-                <h2>Oyuncular bunlar..</h2>
+                <h2 style="color:red;">Oyuncular bunlar..</h2>
                 <div class="row">
                     @foreach (var item in Model.Players)
                     {
